#+TITLE: CLPM Changelog

* Unreleased

  + Fix bug in client where =activate-context= did not ignore inherited source
    registries for bundles.

* v0.3.1 - 2020-06-04

  + Fix bug in CLPI when interacting with dual-sources
  + Fix bug parsing :version dependency forms from ASDF.

* v0.3.0 - 2020-05-30

  + Pull HTTP client into separate library
    (=clpm-multi-http-client=). Additionally, this library supports connection
    pooling with Drakma, so make Drakma the default on non Windows platforms.
  + Pull ASDF system groveler into separate project.
  + Pull CLPI documentation and implementation into separate project.
  + Pull QL integration for CLPI into separate project.
  + Add =(:grovel :lisp :implementation)= and =(:grovel :lisp :path)= for
    controlling what Lisp implementation is used by the groveler.
  + Installing releases now writes project and release metadata to CLPM's data
    dir. This allows the CLPM cache to be cleared, but have data on installed
    projects remain.
  + Add the =(:log :level)= config option for controlling log verbosity.
  + Add =--no-resolve= option to =bundle install= to prevent re-resolving
    requirements when you know the lock file is up to date.
  + Client largely rewritten to launch a CLPM process and use a REPL to
    communicate instead of translating everything to CLI invocations.
  + Client's INSTALL and UPDATE functions made much simpler and more
    featureful.
  + Client's dribble features improved greatly.
  + =source-registry= CLI added.
  + =output-translations= CLI added.
  + =exec= CLI added.
  + =activate-context= function added to client to allow changing source registry
    and output translations of the current image.
  + Add =bundle init= CLI and =bundle-init= in client to easily create a new
    clpmfile.
  + =client source-registry.d= CLI added to generate source registry config so
    ASDF can find the client.

* v0.2.1 - 2020-04-05
