@@ -4,6 +4,8 @@
 
   + Fix bug in client where =activate-context= did not ignore inherited source
     registries for bundles.
+  + Sort more things serializing contexts. Should prevent excessive noise in
+    bundle lock files.
 
 * v0.3.1 - 2020-06-04
 
